# postgast

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  THIRD-PARTY-LICENSES  hatch_build.py  pg_query_exports.def  pyproject.toml
.claude/: settings.json
.claude/commands/opsx/: apply.md  archive.md  bulk-archive.md  continue.md  explore.md  ff.md  new.md  onboard.md  sync.md  verify.md
.claude/hooks/: format.sh
.claude/skills/openspec-apply-change/: SKILL.md
.claude/skills/openspec-archive-change/: SKILL.md
.claude/skills/openspec-bulk-archive-change/: SKILL.md
.claude/skills/openspec-continue-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/openspec-ff-change/: SKILL.md
.claude/skills/openspec-new-change/: SKILL.md
.claude/skills/openspec-onboard/: SKILL.md
.claude/skills/openspec-sync-specs/: SKILL.md
.claude/skills/openspec-verify-change/: SKILL.md
.github/workflows/: check-libpg-query-update.yml  ci.yml  publish.yml
docs/: api.rst  architecture.rst  comparison.md  conf.py  contributing.rst  examples.rst  guide.rst  index.rst  llms-full.txt  llms.txt  research-docs-tools.md  upgrade-policy.rst
openspec/: config.yaml
openspec/changes/add-ast-helpers/: design.md  proposal.md  tasks.md
openspec/changes/add-deparse/: tasks.md
openspec/changes/add-fingerprint/: design.md  tasks.md
openspec/changes/add-pretty-print/: proposal.md  tasks.md
openspec/changes/archive/2026-02-20-add-deparse/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-20-add-parse-function/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-20-normalize/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-20-vendor-libpg-query/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-add-ast-helpers/: design.md  tasks.md
openspec/changes/archive/2026-02-21-add-fingerprint/: proposal.md  tasks.md
openspec/changes/archive/2026-02-21-add-tree-walking/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-ctypes-library-loading/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-extract-ddl-identity/: proposal.md  tasks.md
openspec/changes/archive/2026-02-21-fuzz-testing/: tasks.md
openspec/changes/ci-multi-os/: design.md  tasks.md
openspec/changes/extract-ddl-identity/: design.md  tasks.md
openspec/changes/fuzz-testing/: design.md  proposal.md  tasks.md
openspec/changes/improve-pretty-print/: design.md  proposal.md  tasks.md
openspec/changes/marimo-ast-walker-recipebook/: design.md  proposal.md  tasks.md
openspec/changes/parser-based-split/: design.md  proposal.md  tasks.md
openspec/changes/recipebook-testing/: design.md  proposal.md  tasks.md
openspec/changes/refactor-test-fixtures/: design.md  proposal.md  tasks.md
openspec/changes/scan-tokenize/: proposal.md  tasks.md
openspec/changes/split/: design.md  proposal.md  tasks.md
openspec/changes/stress-boundary-tests/: proposal.md  tasks.md
openspec/changes/to-drop/: design.md  tasks.md
openspec/changes/typed-ast-integration/: design.md  tasks.md
openspec/changes/typed-ast-wrappers/: design.md  proposal.md  tasks.md
openspec/specs/advanced-testing/: spec.md
openspec/specs/ast-helpers/: spec.md
openspec/specs/ast-navigation/: spec.md
openspec/specs/bindings/: spec.md
openspec/specs/boundary-testing/: spec.md
openspec/specs/c-struct-bindings/: spec.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/ctypes-bindings/: spec.md
openspec/specs/ddl-drop-generation/: spec.md
openspec/specs/ddl-identity-extraction/: spec.md
openspec/specs/deparse/: spec.md
openspec/specs/error-handling/: spec.md
openspec/specs/fingerprint/: spec.md
openspec/specs/function-signatures/: spec.md
openspec/specs/fuzz-testing/: spec.md
openspec/specs/native-library-loading/: spec.md
openspec/specs/normalize/: spec.md
openspec/specs/operations/: spec.md
openspec/specs/parse/: spec.md
openspec/specs/plpgsql/: spec.md
openspec/specs/pretty-print/: spec.md
openspec/specs/protobuf-bindings/: spec.md
openspec/specs/recipebook/: spec.md
openspec/specs/roundtrip-testing/: spec.md
openspec/specs/scan/: spec.md
openspec/specs/split/: spec.md
openspec/specs/stress-testing/: spec.md
openspec/specs/test-fixtures/: spec.md
openspec/specs/testing/: spec.md
openspec/specs/tree-walking/: spec.md
openspec/specs/typed-ast-wrappers/: spec.md
openspec/specs/typed-tree-walking/: spec.md
openspec/specs/vendored-library-bundling/: spec.md
recipes/: ast_walker.py  batch_processing.py  migration_checks.py  sql_transforms.py
scripts/: generate_nodes.py
src/postgast/: __init__.py  _deparse.py  _errors.py  _fingerprint.py  _native.py  _normalize.py  _parse.py  _pg_query_pb2.py  _pg_query_pb2.pyi  _scan.py  _split.py  _walk.py  deparse.py  errors.py  fingerprint.py  format.py  helpers.py  native.py  nodes.py  normalize.py  parse.py  pg_query_pb2.py  pg_query_pb2.pyi  plpgsql.py  precedence.py  py.typed  scan.py  split.py  walk.py
src/postgast/format/: __init__.py  base.py  constants.py  ddl.py  dml.py  expressions.py  formatter.py  select.py  utils.py
src/postgast/nodes/: __init__.py  _generated.py  base.py
tests/: test_format.py  test_format_output.py
tests/postgast/: conftest.py  test_boundary.py  test_classify_statement.py  test_deparse.py  test_errors.py  test_fingerprint.py  test_format.py  test_format_output.py  test_fuzz.py  test_helpers.py  test_native_loading.py  test_nodes.py  test_normalize.py  test_parse.py  test_placeholder.py  test_plpgsql.py  test_precedence.py  test_protobuf_bindings.py  test_recipes.py  test_roundtrip.py  test_scan.py  test_split.py  test_stress.py  test_to_drop.py  test_verify_ctypes.py  test_walk.py
tests/postgast/format_cases/: cte.yaml  ddl.yaml  dml.yaml  expression.yaml  identifier.yaml  join.yaml  misc.yaml  select.yaml  where.yaml
tests/postgast/plpgsql_error_cases/: edge.yaml  malformed.yaml
(+55 files in other folders)
