[project]
name = "postgast"
description = "Python bindings to libpg_query — parse, deparse, normalize, fingerprint, split, and scan PostgreSQL SQL"
authors = [
    { name = "Edward Jones", email = "edwardrjones97@gmail.com" },
]
readme = "README.md"
license = "BSD-2-Clause"
license-files = ["LICENSE", "THIRD-PARTY-LICENSES"]
requires-python = ">=3.10"
dynamic = ["version"]
keywords = ["postgresql", "sql", "parser", "ast", "libpg_query"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "protobuf>=5.27.2",
]

[project.urls]
Homepage = "https://github.com/eddieland/postgast"
Repository = "https://github.com/eddieland/postgast"
Issues = "https://github.com/eddieland/postgast/issues"
Changelog = "https://github.com/eddieland/postgast/releases"
Documentation = "https://postgast.readthedocs.io"

[dependency-groups]
test = [
    "hypothesis>=6.151.9",
    "protobuf>=5.27.2,<6.0.0", # pin to avoid regenerating pb2 when protobuf major changes
    "psycopg[binary]",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest>=9.0.2",
]
dev = [
    { include-group = "test" },
    "basedpyright>=1.38.0",
    "codespell>=2.4.1",
    "grpcio-tools>=1.70",
    "mdformat-frontmatter>=2.0.0",
    "mdformat-gfm>=1.0.0",
    "mdformat-pyproject>=0.0.2",
    "mdformat-ruff>=0.1",
    "mdformat>=1.0.0",
    "ruamel-yaml>=0.19.1",
    "ruff>=0.15.1",
]
docs = [
    "sphinx>=8.0",
    "furo>=2024.8",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=2.0",
]
recipes = [
    "marimo>=0.10",
    "pyzmq>=27.1.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
# https://github.com/ninoseki/uv-dynamic-versioning/
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
bump = true

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist]
include = ["src/postgast", "vendor/libpg_query", "hatch_build.py", "pg_query_exports.def", "THIRD-PARTY-LICENSES"]

[tool.hatch.build.targets.wheel]
packages = ["src/postgast"]

[tool.ruff]
line-length = 120
exclude = ["src/postgast/pg_query_pb2.py", "src/postgast/pg_query_pb2.pyi"]

[tool.ruff.format]
preview = true
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint]
select = [
    # See: https://docs.astral.sh/ruff/rules/
    # Basic list from: https://docs.astral.sh/ruff/linter/#rule-selection
    "E", # https://docs.astral.sh/ruff/rules/#error-e
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
    "D", # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "G", # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "C4", # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "PIE", # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "PERF", # https://docs.astral.sh/ruff/rules/#perflint-perf
    "PGH", # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "T10", # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
    "T20", # https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "TC", # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
]
ignore = [
    # Disable some rules that are overly pedantic. Add/remove as desired:
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
    "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
    # We use both ruff formatter and linter so some rules should always be disabled.
    # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191", # https://docs.astral.sh/ruff/rules/tab-indentation/
    "E111", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple/
    "E114", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple-comment/
    "E117", # https://docs.astral.sh/ruff/rules/over-indented/
    "D206", # https://docs.astral.sh/ruff/rules/docstring-tab-indentation/
    "D300", # https://docs.astral.sh/ruff/rules/triple-single-quotes/
    "Q000", # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
    "Q001", # https://docs.astral.sh/ruff/rules/bad-quotes-multiline-string/
    "Q002", # https://docs.astral.sh/ruff/rules/bad-quotes-docstring/
    "Q003", # https://docs.astral.sh/ruff/rules/avoidable-escaped-quote/
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
    "ISC002", # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
]
unfixable = [
    "F403", # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star/ — wildcard imports are banned
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100", # https://docs.astral.sh/ruff/rules/undocumented-public-module/
    "D101", # https://docs.astral.sh/ruff/rules/undocumented-public-class/
    "D102", # https://docs.astral.sh/ruff/rules/undocumented-public-method/
    "D103", # https://docs.astral.sh/ruff/rules/undocumented-public-function/
    "D104", # https://docs.astral.sh/ruff/rules/undocumented-public-package/
]
"recipes/**/*.py" = [
    "D100",    # https://docs.astral.sh/ruff/rules/undocumented-public-module/
    "D103",    # https://docs.astral.sh/ruff/rules/undocumented-public-function/
    "PERF203", # https://docs.astral.sh/ruff/rules/try-except-in-loop/ — recipes demo error handling in loops
    "PERF401", # https://docs.astral.sh/ruff/rules/manual-list-comprehension/ — readability over micro-opt
    "TC001",   # https://docs.astral.sh/ruff/rules/typing-only-first-party-import/ — marimo cells can't use TYPE_CHECKING blocks
]

[tool.basedpyright]
# BasedPyright currently seems like the best type checker option, much faster
# than mypy and with a good extension for VSCode/Cursor.
# https://marketplace.visualstudio.com/items?itemName=detachhead.basedpyright
# https://docs.basedpyright.com/latest/configuration/config-files/#sample-pyprojecttoml-file
include = ["src", "tests"]
exclude = ["src/postgast/pg_query_pb2.py", "src/postgast/pg_query_pb2.pyi", "src/postgast/nodes/", "tests/postgast/test_nodes.py"]
# By default BasedPyright is very strict, so you almost certainly want to disable
# some of the rules.
# First, these turn off warnings about (yes) how you ignore warnings:
reportIgnoreCommentWithoutRule = false
reportUnnecessaryTypeIgnoreComment = false
# A few typically noisy warnings are next.
# How many you enable is up to you. The first few are off by default, but you can
# comment/uncomment these as desired:
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportUnreachable = false
reportUnannotatedClassAttribute = false
# Enforce type annotations — previously warnings, now errors.
reportMissingParameterType = "error"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
# reportPrivateImportUsage = false
# reportPrivateLocalImportUsage = false
# reportMissingImports = false
# reportUnnecessaryIsInstance = false

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = ["cp3??t-*"]
test-requires = ["pytest", "hypothesis"]
test-command = 'pytest {project}/tests -x -m "not fuzz"'

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.mdformat]
wrap = 120
end_of_line = "lf"

[tool.codespell]
ignore-words-list = "fo,inout,larg"
skip = "src/postgast/pg_query_pb2.py,src/postgast/pg_query_pb2.pyi,src/postgast/nodes"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--doctest-modules"]
filterwarnings = []
markers = [
    "stress: marks tests as stress tests — large inputs, deep nesting, high counts (deselect with '-m \"not stress\"')",
    "fuzz: marks tests as fuzz tests — property-based tests with Hypothesis (deselect with '-m \"not fuzz\"')",
]

[tool.coverage.run]
source = ["postgast"]
omit = ["src/postgast/pg_query_pb2.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
